set( library_name "libguiex_core" )
message( STATUS "generate library: " ${library_name} )

set( ${library_name}_SRCS
    guianimation.cpp
    guianimation.h
    guianimationmanager.cpp
    guianimationmanager.h
    guias.cpp
    guias.h
    guiasfactory.cpp
    guiasfactory.h
    guiasgenerator.cpp
    guiasgenerator.h
    guiasmanager.cpp
    guiasmanager.h
    guiassert.cpp
    guiassert.h
    guibase.h
    guicleanup.cpp
    guicleanup.h
    guicolor.cpp
    guicolor.h
    guicolorrect.cpp
    guicolorrect.h
    guiconfig.h
    guiconfigfileloader.cpp
    guiconfigfileloader.h
    guidatachunk.h
    guidebug.cpp
    guidynlib.h
    guienumtype.h
    guievent.cpp
    guievent.h
    guiex.h
    guiexception.cpp
    guiexception.h
    guifontdata.cpp
    guifontdata.h
    guifontmanager.cpp
    guifontmanager.h
    guigarbagecollector.h
    guiimage.cpp
    guiimage.h
    guiimagedata.cpp
    guiimagedata.h
    guiimagemanager.cpp
    guiimagemanager.h
    guiinputprocessor.cpp
    guiinputprocessor.h
    guiinterface.cpp
    guiinterface.h
    guiinterfacecommand.cpp
    guiinterfacecommand.h
    guiinterfaceconfigfile.cpp
    guiinterfaceconfigfile.h
    guiinterfacefilesys.cpp
    guiinterfacefilesys.h
    guiinterfacefont.cpp
    guiinterfacefont.h
    guiinterfaceimageloader.cpp
    guiinterfaceimageloader.h
    guiinterfaceime.cpp
    guiinterfaceime.h
    guiinterfacekeyboard.cpp
    guiinterfacekeyboard.h
    guiinterfacemanager.cpp
    guiinterfacemanager.h
    guiinterfacemouse.cpp
    guiinterfacemouse.h
    guiinterfaceparser.h
    guiinterfacerender.cpp
    guiinterfacerender.h
    guiinterfacescript.cpp
    guiinterfacescript.h
    guiinterfacesound.cpp
    guiinterfacesound.h
    guiinterfacestringconv.cpp
    guiinterfacestringconv.h
    guiinterpolation.cpp
    guiinterpolation.h
    guilogmsg.cpp
    guilogmsg.h
    guilogmsgcallback.cpp
    guilogmsgcallback.h
    guilogmsgmanager.cpp
    guilogmsgmanager.h
    guilogmsgrecord.cpp
    guilogmsgrecord.h
    guimath.cpp
    guimath.h
    guimatrix3.cpp
    guimatrix3.h
    guimatrix4.cpp
    guimatrix4.h
    guimousecursor.cpp
    guimousecursor.h
    guinode.cpp
    guinode.h
    guiobjectmanager.cpp
    guiobjectmanager.h
    guiobjectmanagerbase.cpp
    guiobjectmanagerbase.h
    guiperfmonitor.cpp
    guiperfmonitor.h
    guiplane.cpp
    guiplane.h
    guiproperty.cpp
    guiproperty.h
    guipropertyconvertor.cpp
    guipropertyconvertor.h
    guipropertymanager.cpp
    guipropertymanager.h
    guiquaternion.cpp
    guiquaternion.h
    guirect.cpp
    guirect.h
    guirenderrect.cpp
    guirenderrect.h
    guiresource.cpp
    guiresource.h
    guiresourcemanager.cpp
    guiresourcemanager.h
    guisceneinfo.cpp
    guisceneinfo.h
    guisceneinfomanager.cpp
    guisceneinfomanager.h
    guisceneutility.cpp
    guisceneutility.h
    guisingleton.h
    guisingleton.inl
    guisize.cpp
    guisize.h
    guistring.h
    guistringconvertor.cpp
    guistringconvertor.h
    guistringex.cpp
    guistringex.h
    guitexture.cpp
    guitexture.h
    guitextureimp.cpp
    guitextureimp.h
    guitexturemanager.cpp
    guitexturemanager.h
    guitimer.cpp
    guitimer.h
    guitypes.h
    guiutility.cpp
    guiutility.h
    guivector2.cpp
    guivector2.h
    guivector3.cpp
    guivector3.h
    guivector4.cpp
    guivector4.h
    guiwidget.cpp
    guiwidget.h
    guiwidgetcallback.cpp
    guiwidgetfactory.cpp
    guiwidgetfactory.h
    guiwidgetgenerator.cpp
    guiwidgetgenerator.h
    guiwidgetmanager.cpp
    guiwidgetmanager.h
    guiwidgetparameter.h
    guiwidgetroot.cpp
    guiwidgetroot.h
    guiwidgetsystem.cpp
    guiwidgetsystem.h
    guiwidgetutility.cpp
    guiwidgetutility.h
    )


add_library( ${library_name} STATIC ${${library_name}_SRCS} )

